fixed text wrapping

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -304,102 +304,6 @@ body {
   }
 }
 
-@keyframes hueShift {
-  0% {
-    background-color: oklch(from var(--primary) l c 210);
-  }
-  7% {
-    background-color: oklch(from var(--primary) l c 240);
-  }
-  14% {
-    background-color: oklch(from var(--primary) l c 280);
-  }
-  21% {
-    background-color: oklch(from var(--primary) l c 320);
-  }
-  28% {
-    background-color: oklch(from var(--primary) l c 350);
-  }
-  35% {
-    background-color: oklch(from var(--primary) l c 0);
-  }
-  42% {
-    background-color: oklch(from var(--primary) l c 20);
-  }
-  49% {
-    background-color: oklch(from var(--primary) l c 40);
-  }
-  56% {
-    background-color: oklch(from var(--primary) l c 60);
-  }
-  63% {
-    background-color: oklch(from var(--primary) l c 80);
-  }
-  70% {
-    background-color: oklch(from var(--primary) l c 110);
-  }
-  77% {
-    background-color: oklch(from var(--primary) l c 140);
-  }
-  84% {
-    background-color: oklch(from var(--primary) l c 170);
-  }
-  91% {
-    background-color: oklch(from var(--primary) l c 200);
-  }
-  100% {
-    background-color: oklch(from var(--primary) l c 210);
-  }
-}
-
-@keyframes borderHueShift {
-  0% {
-    border-top-color: oklch(from var(--primary) l c 210);
-  }
-  7% {
-    border-top-color: oklch(from var(--primary) l c 240);
-  }
-  14% {
-    border-top-color: oklch(from var(--primary) l c 280);
-  }
-  21% {
-    border-top-color: oklch(from var(--primary) l c 320);
-  }
-  28% {
-    border-top-color: oklch(from var(--primary) l c 350);
-  }
-  35% {
-    border-top-color: oklch(from var(--primary) l c 0);
-  }
-  42% {
-    border-top-color: oklch(from var(--primary) l c 20);
-  }
-  49% {
-    border-top-color: oklch(from var(--primary) l c 40);
-  }
-  56% {
-    border-top-color: oklch(from var(--primary) l c 60);
-  }
-  63% {
-    border-top-color: oklch(from var(--primary) l c 80);
-  }
-  70% {
-    border-top-color: oklch(from var(--primary) l c 110);
-  }
-  77% {
-    border-top-color: oklch(from var(--primary) l c 140);
-  }
-  84% {
-    border-top-color: oklch(from var(--primary) l c 170);
-  }
-  91% {
-    border-top-color: oklch(from var(--primary) l c 200);
-  }
-  100% {
-    border-top-color: oklch(from var(--primary) l c 210);
-  }
-}
-
 .nav-page {
   background: oklch(from var(--neutral) var(--900));
 
@@ -503,19 +407,13 @@ body {
 
   &:hover,
   &:focus {
-    background-color: oklch(from var(--color-sidebar) var(--400));
+    background-color: oklch(from var(--color-sidebar) var(--600));
 
     .sidebar-title {
       color: var(--color-title);
       opacity: 1;
     }
   }
-
-  /*@media screen and (min-width: 600px) {
-    width: 60px;
-    height: 100dvh;
-    position: fixed;
-  }*/
 }
 
 .sidebar-main:not(.nav-page .sidebar-main) {
@@ -543,27 +441,7 @@ body {
   padding: 8px 16px 8px;
   align-items: center;
   gap: var(--flow-space);
-
-  /*@media screen and (min-width: 600px) {
-    width: 60px;
-    padding: 16px 0 16px;
-    flex-direction: column;
-    align-items: center;
-    flex: 0 0 auto;
-  }*/
-
-  /*&:after {
-    content: "";
-    margin-left: auto;
-    display: block;
-    height: 20px;
-    width: 20px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    filter: invert(1);
-    opacity: 0.5;
-    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2256%22%20height%3D%2216%22%20fill%3D%22none%22%3E%3Cg%20fill%3D%22%23000%22%20clip-path%3D%22url(%23a)%22%3E%3Cpath%20d%3D%22m13.488%207.475-4.329%204.379a.5.5%200%200%201-.353.146H4.013V7.207a.5.5%200%200%201%20.146-.354l2.854-2.82V9l1.5-1.5%204.975-.025Z%22%20opacity%3D%22.2%22%2F%3E%3Cpath%20d%3D%22M13.83%202.172a4%204%200%200%200-5.656%200L3.793%206.5a.994.994%200%200%200-.293.707v4.586l-1.854%201.853a.5.5%200%200%200%20.708.708L4.207%2012.5h4.587a.995.995%200%200%200%20.706-.292l4.327-4.375a4%204%200%200%200%20.003-5.661Zm-4.95.707A3%203%200%200%201%2013.236%207h-3.53l2.148-2.146a.5.5%200%200%200-.708-.708L7.5%207.793V4.242l1.38-1.363ZM4.5%207.209l2-1.979v3.563l-2%202V7.209ZM8.794%2011.5H5.207l3.5-3.5h3.546l-3.46%203.5Z%22%2F%3E%3Cpath%20d%3D%22m33.488%207.475-4.33%204.379a.5.5%200%200%201-.352.146h-4.793V7.207a.5.5%200%200%201%20.146-.354l2.854-2.82V9l1.5-1.5%204.975-.025Z%22%20opacity%3D%22.2%22%2F%3E%3Cpath%20d%3D%22M33.83%202.172a4%204%200%200%200-5.656%200L23.793%206.5a.994.994%200%200%200-.293.707v4.586l-1.854%201.853a.5.5%200%200%200%20.707.708l1.854-1.854h4.587a.996.996%200%200%200%20.706-.292l4.327-4.375a4%204%200%200%200%20.003-5.661Zm-4.95.707A3%203%200%200%201%2033.236%207h-3.53l2.148-2.146a.5.5%200%200%200-.708-.708L27.5%207.793V4.242l1.38-1.363Zm-4.38%204.33%202-1.979v3.563l-2%202V7.209Zm4.294%204.291h-3.587l3.5-3.5h3.547l-3.46%203.5Z%22%2F%3E%3Cpath%20d%3D%22m53.488%207.475-4.33%204.379a.5.5%200%200%201-.352.146h-4.793V7.207a.5.5%200%200%201%20.146-.354l2.854-2.82V9l1.5-1.5%204.975-.025Z%22%20opacity%3D%22.2%22%2F%3E%3Cpath%20d%3D%22M53.83%202.172a4%204%200%200%200-5.656%200L43.793%206.5a.994.994%200%200%200-.293.707v4.586l-1.854%201.853a.5.5%200%200%200%20.707.708l1.854-1.854h4.587a.996.996%200%200%200%20.706-.292l4.327-4.375a4%204%200%200%200%20.003-5.661Zm-4.95.707A3%203%200%200%201%2053.236%207h-3.53l2.148-2.146a.5.5%200%200%200-.708-.708L47.5%207.793V4.242l1.38-1.363Zm-4.38%204.33%202-1.979v3.563l-2%202V7.209Zm4.294%204.291h-3.587l3.5-3.5h3.547l-3.46%203.5Z%22%2F%3E%3C%2Fg%3E%3Cdefs%3E%3CclipPath%20id%3D%22a%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M0%200h56v16H0z%22%2F%3E%3C%2FclipPath%3E%3C%2Fdefs%3E%3C%2Fsvg%3E");
-  }*/
+  max-width: 100dvw;
 }
 
 .sidebar-about {
@@ -581,19 +459,9 @@ body {
 
 .sidebar-title,
 .sidebar-name {
-  /*color-scheme: light;*/
   font-size: var(--font-size-5);
   color: var(--color-title);
   opacity: 0.8;
-  /*@media screen and (min-width: 600px) {
-    writing-mode: vertical-rl;
-    transform: rotate(0deg);
-    display: block;
-    line-height: 1;
-    white-space: nowrap;
-    position: relative;
-    left: 0px;
-  }*/
 }
 
 .sidebar-name {
@@ -609,10 +477,18 @@ body {
   opacity: 1;
   display: flex;
   width: 100%;
+  justify-content: space-between;
+  gap: 20px;
+
+  h2 {
+    font-size: var(--font-size-5);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
   time {
     font-size: var(--font-size-6);
-    margin-left: auto;
     font-variant-numeric: tabular-nums;
     opacity: 0.4;
     display: flex;
